<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_architeture"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/arch_lifecycle"
                style="@style/card_item_text"
                android:text="@string/lifecycles" />

            <TextView
                android:id="@+id/arch_live_data"
                style="@style/card_item_text"
                android:text="@string/live_data" />

            <TextView
                android:id="@+id/arch_view_model"
                style="@style/card_item_text"
                android:text="@string/view_model" />

            <TextView
                android:id="@+id/arch_room"
                style="@style/card_item_text"
                android:text="@string/room" />

            <TextView
                android:id="@+id/arch_work_manager"
                style="@style/card_item_text"
                android:text="@string/work_manager" />

            <TextView
                android:id="@+id/arch_paging"
                style="@style/card_item_text"
                android:text="@string/paging" />

            <TextView
                android:id="@+id/arch_data_binding"
                style="@style/card_item_text"
                android:text="@string/data_binding" />

            <TextView
                android:id="@+id/arch_navigation"
                style="@style/card_item_text"
                android:text="@string/navigation" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
